Update dependencies
Signed-off-by: Kevin Earls <kevinearls@mac.com>